--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -16,6 +16,13 @@ body {
      padding: 20px;
 }
 
+.project {
+    margin-left: 20px;
+    background-color: #CAEEFF;
+    padding: 15px;
+    width: 520px;
+}
+
 .jumbotron {
 	position: relative;
 	background: none;
